--- a/textEncoding/sendMapping.json
+++ b/textEncoding/sendMapping.json
@@ -1,5 +1,5 @@
 {
-    "knora-api:mappingHasName": "testMappingEle7",
+    "knora-api:mappingHasName": "roud_mapping9",
     "knora-api:attachedToProject": {
         "@id": "http://rdfh.ch/projects/0112"
     },
