--- a/textEncoding/sendMapping.json
+++ b/textEncoding/sendMapping.json
@@ -1,9 +1,9 @@
 {
-    "knora-api:mappingHasName": "roud_mapping9",
+    "knora-api:mappingHasName": "roud_mapping10",
     "knora-api:attachedToProject": {
         "@id": "http://rdfh.ch/projects/0112"
     },
-    "rdfs:label": "MappingNameSegment",
+    "rdfs:label": "mapping for Roud project",
     "@context": {
         "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
         "knora-api": "http://api.knora.org/ontology/knora-api/v2#"
